ejercicio hasta 8 completo

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parque Natural</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <h1>Parque Natural Sierra Bicuerda</h1>
+    <h1><span style=color:green>Parque Natural</span> <span style=color:orange> Sierra Bicuerda</h1>
     <ul>
-      <li><a href="">Inicio</a></li>
+      <li><a href="./index.html">Inicio</a></li>
       <li><a href="./especies.html">Especies</a></li>
       <li><a href="">Reservas</a></li>
       <li><a href="">Galería</a></li>
     </ul>
-    <h2>Bienbenidos al Parque Natural</h2>
+    <div id="textomarco">
+    <h2>Bienvenidos al Parque Natural</h2>
     <p>
       El Parque Natural de Sierra Bicuerca, reserva de la biosfera, es
       referencia obligada del bosque y matorral mediterráneo interior, y hábitat
@@ -32,5 +34,6 @@
       numerosas pisadas de jabalís y ciervos, y si no hacemos mucho ruido, no es difícil encontrar alguno abrevando bajo la atenta mirada del martín 
       pescador, esperando a la despistada trucha.
     </p>
+    </div>
   </body>
 </html>
