--- a/especies.html
+++ b/especies.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parque Natural</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <h1>Parque Natural Sierra Bicuerda</h1>
+    <h1><span style=color:green>Parque Natural</span> <span style=color:orange> Sierra Bicuerda</h1>
     <ul>
-      <li><a href="">Inicio</a></li>
+      <li><a href="./index.html">Inicio</a></li>
       <li><a href="./especies.html">Especies</a></li>
       <li><a href="">Reservas</a></li>
       <li><a href="">Galería</a></li>
     </ul>
+    <div id="textomarco">
     <h2>Especies del parque</h2>
     <p>Estos son algunos de los habitantes del parque:</p>
     <h3>Nutria</h3>
@@ -23,18 +25,19 @@
       el río. Cerca de sus lugares de cobijo, podremos ver toboganes que crean
       para llegar rápidamente al agua.
     </p>
-    <h4>Buitre Leonardo</h4>
+    <h3>Buitre Leonardo</h3>
     <p>
       El buitre leonardo (Gyps fulvus) es un ave rapaz, una de las mayores que
       puede encontrarse en la Península Ibérica. Su alimentación principal es la
       carroña, que localiza con su aguda vista.
     </p>
-    <h5>Gineta</h5>
+    <h3>Gineta</h3>
     <p>
       La gineta (Genetta genetta) es una especie de mamífero carnívoro. Son
       grandes trepadoras,muy ágiles y grandes cazadoras de pequeños animales.
       Aunque también se alimentan de los frutos del bosque que se pueden
       encontrar en el parque.
     </p>
+</div>
   </body>
 </html>
