falta cuadrago y color

--- a/especies.html
+++ b/especies.html
@@ -9,13 +9,14 @@
   </head>
   <body>
     <h1><span style=color:green>Parque Natural</span> <span style=color:orange> Sierra Bicuerda</h1>
-    <ul>
+        <nav>
+         <div id="menu-lateral" class="menuV"><ul>
       <li><a href="./index.html">Inicio</a></li>
       <li><a href="./especies.html">Especies</a></li>
-      <li><a href="">Reservas</a></li>
-      <li><a href="">Galería</a></li>
-    </ul>
-    <div id="textomarco">
+      <li><a href="#">Reservas</a></li>
+      <li><a href="#">Galería</a></li>
+        </ul></div></nav>
+        <div id="textomarco">
     <h2>Especies del parque</h2>
     <p>Estos son algunos de los habitantes del parque:</p>
     <h3>Nutria</h3>
