--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <body>
     <h1><span style=color:green>Parque Natural</span> <span style=color:orange> Sierra Bicuerda</h1>
     <ul>
-      <li><a href="./index.html">Inicio</a></li>
-      <li><a href="./especies.html">Especies</a></li>
-      <li><a href="">Reservas</a></li>
-      <li><a href="">Galería</a></li>
+        <div id="menu-lateral">
+            <li><a href="./index.html">Inicio</a></li>
+            <li><a href="./especies.html">Especies</a></li>
+            <li><a href="">Reservas</a></li>
+            <li><a href="">Galería</a></li>
+              </div>
     </ul>
     <div id="textomarco">
     <h2>Bienvenidos al Parque Natural</h2>
