--- a/especies.html
+++ b/especies.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parque Natural</title>
     <link rel="stylesheet" href="./css/style.css">
+    <img src="./imagenes/panoramica.jpg"  class="img-responsive"  style="width:97% !important; height:230px !important"  alt="Parque natural" >
   </head>
   <body>
     <h1><span style=color:green>Parque Natural</span> <span style=color:orange> Sierra Bicuerda</h1>
-        <nav>
-         <div id="menu-lateral" class="menuV"><ul>
+        <ul> <div id="menu-lateral">
       <li><a href="./index.html">Inicio</a></li>
       <li><a href="./especies.html">Especies</a></li>
       <li><a href="#">Reservas</a></li>
       <li><a href="#">Galería</a></li>
-        </ul></div></nav>
+      </div></ul>
         <div id="textomarco">
     <h2>Especies del parque</h2>
     <p>Estos son algunos de los habitantes del parque:</p>
@@ -40,5 +40,6 @@
       encontrar en el parque.
     </p>
 </div>
+<div id="licencia"> <p>La imagen del título pertenece a AMagill y se distribuye bajo licencia CreativeCommons</p></div>
   </body>
 </html>
