--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parque Natural</title>
     <link rel="stylesheet" href="./css/style.css">
+    <img src="./imagenes/panoramica.jpg"  class="img-responsive"  style="width:97% !important; height:230px !important"  alt="Parque natural" >
   </head>
   <body>
     <h1><span style=color:green>Parque Natural</span> <span style=color:orange> Sierra Bicuerda</h1>
@@ -13,8 +14,8 @@
         <div id="menu-lateral">
             <li><a href="./index.html">Inicio</a></li>
             <li><a href="./especies.html">Especies</a></li>
-            <li><a href="">Reservas</a></li>
-            <li><a href="">Galería</a></li>
+            <li><a href="#">Reservas</a></li>
+            <li><a href="#">Galería</a></li>
               </div>
     </ul>
     <div id="textomarco">
@@ -37,5 +38,6 @@
       pescador, esperando a la despistada trucha.
     </p>
     </div>
+    <div id="licencia"> <p>La imagen del título pertenece a AMagill y se distribuye bajo licencia CreativeCommons</p></div>
   </body>
 </html>
